--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!-- templates/base.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -117,7 +117,10 @@
 <body>
     {% if user.is_authenticated %}
     <div class="navbar">
-        <h1>🏘️ Ujirani Mwema</h1>
+        <h1>
+            <a href="{% url 'accountant_dashboard' %}"
+               >🏘️ Ujirani Mwema </a>
+        </h1>
         <div>
             <span>{{ user.get_full_name }}</span>
             <a href="{% url 'logout' %}">Logout</a>
@@ -133,6 +136,8 @@
             {% endfor %}
         </div>
         {% endif %}
+
+    Let us check here bro
 
         {% block content %}{% endblock %}
     </div>
